syntax = "proto3";

package api;

service Txn {
  rpc BaseTxn(BaseRequest) returns (BaseReply){}
  rpc EmptyCall(EmptyMessage) returns (EmptyMessage){}
}

message BaseRequest {
  string reqBody=1;
}

message BaseReply {
  string respBody=1;
  string errorCode=2;
  string errorDes=3;
}

message EmptyMessage {

}
