syntax = "proto3";

package bank_common;

service Txn {
  rpc BaseTxn(BaseRequest) returns (BaseReply){}
}

message BaseRequest {
  string reqBody=1;
}

message BaseReply {
  string respBody=1;
  string errorCode=2;
  string errorDes=3;
}
